--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -15,8 +15,7 @@ common-js:
 ---
 
 <!DOCTYPE html>
-<html lang="en">
-  <!-- Beautiful Jekyll | MIT license | Copyright Dean Attali 2016 -->
+<html lang="ru">
   {% include head.html %}
 
   <body>
